--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="./assets/images/image-omelette.jpeg" alt="gaga" class="recipe-image">
+    <img src="./assets/images/image-omelette.jpeg" class="recipe-image">
     <div class="content">
       <h1>Simple Omelette Recipe</h1>
       <p class="description">An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked 
